--- a/package.json
+++ b/package.json
@@ -9,10 +9,44 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.2.3",
+    "@gorhom/bottom-sheet": "^5.0.5",
+    "@notifee/react-native": "^9.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-firebase/app": "^21.4.0",
+    "@react-native-firebase/messaging": "^21.4.0",
+    "@react-navigation/bottom-tabs": "^7.0.1",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.0.0",
     "expo": "~51.0.28",
+    "expo-contacts": "~13.0.5",
+    "expo-font": "~12.0.10",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
+    "lottie-react-native": "^7.1.0",
+    "native-base": "^3.4.28",
+    "phosphor-react-native": "^2.2.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-background-timer": "^2.4.1",
+    "react-native-change-icon": "^5.0.0",
+    "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-gesture-handler": "^2.20.2",
+    "react-native-maps": "^1.20.0",
+    "react-native-mask-input": "^1.2.3",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-restart": "^0.0.27",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-send-intent": "^1.3.0",
+    "react-native-sound": "^0.11.2",
+    "react-native-sound-player": "^0.14.3",
+    "react-native-svg": "^15.8.0",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-toast-message": "^2.2.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
