--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-firebase/app": "^21.4.0",
     "@react-native-firebase/messaging": "^21.4.0",
+    "@react-native-vector-icons/feather": "^4.29.2-alpha.35",
     "@react-navigation/bottom-tabs": "^7.0.1",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
+    "@shopify/flash-list": "^1.7.2",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-contacts": "~13.0.5",
     "expo-font": "~12.0.10",
@@ -32,7 +35,7 @@
     "react-native-background-timer": "^2.4.1",
     "react-native-change-icon": "^5.0.0",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-gesture-handler": "^2.20.2",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "^1.20.0",
     "react-native-mask-input": "^1.2.3",
     "react-native-paper": "^5.12.5",
@@ -51,6 +54,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.1.3"
   },
   "private": true
