--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "build:dev": "eas build --profile development",
+    "build:preview": "eas build --profile preview",
+    "build:prod": "eas build --profile production",
+    "update": "eas update --branch production",
+    "submit": "eas build --auto-submit"
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.2.3",
+    "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/native": "^7.0.4",
+    "@react-navigation/native-stack": "^7.1.1",
     "expo": "~52.0.6",
     "expo-font": "~13.0.1",
     "expo-status-bar": "~2.0.0",
@@ -20,7 +27,9 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-toast-notifications": "^3.4.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "expo-updates": "~0.26.9",
+    "expo-dev-client": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
