--- a/package.json
+++ b/package.json
@@ -15,21 +15,25 @@
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.2.3",
+    "@hookform/resolvers": "^3.9.1",
     "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/native-stack": "^7.1.1",
-    "expo": "~52.0.6",
+    "expo": "^52.0.11",
+    "expo-dev-client": "~5.0.4",
     "expo-font": "~13.0.1",
     "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.4",
+    "expo-updates": "~0.26.9",
     "react": "18.3.1",
-    "react-native": "0.76.1",
+    "react-hook-form": "^7.53.2",
+    "react-native": "0.76.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-toast-notifications": "^3.4.0",
     "styled-components": "^6.1.13",
-    "expo-updates": "~0.26.9",
-    "expo-dev-client": "~5.0.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
