--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-toast-notifications": "^3.4.0",
+    "remask": "^1.2.2",
     "styled-components": "^6.1.13",
     "zod": "^3.23.8"
   },
