--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@hookform/resolvers": "^3.9.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/native-stack": "^7.1.1",
+    "axios": "^1.7.8",
     "expo": "^52.0.11",
     "expo-dev-client": "~5.0.4",
     "expo-font": "~13.0.1",
