--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "java.configuration.updateBuildConfiguration": "interactive",
+    "DockerRun.DisableDockerrc": true,
+    "java.compile.nullAnalysis.mode": "automatic"
 }
