--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.2.3",
+    "@gorhom/bottom-sheet": "^5.0.6",
     "@hookform/resolvers": "^3.9.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.7",
@@ -22,6 +23,7 @@
     "@react-navigation/native-stack": "^7.1.1",
     "axios": "^1.7.8",
     "expo": "^52.0.11",
+    "expo-contacts": "~14.0.2",
     "expo-font": "~13.0.1",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.4",
@@ -30,13 +32,16 @@
     "react": "18.3.1",
     "react-hook-form": "^7.53.2",
     "react-native": "0.76.3",
+    "react-native-popper": "^0.3.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-toast-notifications": "^3.4.0",
     "remask": "^1.2.2",
     "styled-components": "^6.1.13",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-gesture-handler": "~2.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
