--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@gorhom/bottom-sheet": "^5.0.6",
     "@hookform/resolvers": "^3.9.1",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/native-stack": "^7.1.1",
@@ -32,16 +33,17 @@
     "react": "18.3.1",
     "react-hook-form": "^7.53.2",
     "react-native": "0.76.3",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-picker-select": "^9.3.1",
     "react-native-popper": "^0.3.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-toast-notifications": "^3.4.0",
     "remask": "^1.2.2",
     "styled-components": "^6.1.13",
-    "zod": "^3.23.8",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-gesture-handler": "~2.20.2"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
