--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "react-native-toast-notifications": "^3.4.0",
     "remask": "^1.2.2",
     "styled-components": "^6.1.13",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "expo-location": "~18.0.4",
+    "expo-task-manager": "~12.0.3",
+    "expo-dev-client": "~5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
