--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@gorhom/bottom-sheet": "^5.0.6",
     "@hookform/resolvers": "^3.9.1",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/app": "^21.6.1",
+    "@react-native-firebase/messaging": "^21.6.1",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/native": "^7.0.4",
@@ -25,9 +27,12 @@
     "axios": "^1.7.8",
     "expo": "^52.0.11",
     "expo-contacts": "~14.0.2",
+    "expo-dev-client": "~5.0.6",
     "expo-font": "~13.0.1",
+    "expo-location": "~18.0.4",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.4",
+    "expo-task-manager": "~12.0.3",
     "expo-updates": "~0.26.9",
     "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
@@ -44,9 +49,10 @@
     "remask": "^1.2.2",
     "styled-components": "^6.1.13",
     "zod": "^3.23.8",
-    "expo-location": "~18.0.4",
-    "expo-task-manager": "~12.0.3",
-    "expo-dev-client": "~5.0.6"
+    "expo-audio": "~0.3.1",
+    "expo-av": "~15.0.1",
+    "react-native-maps": "1.18.0",
+    "expo-build-properties": "~0.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
