--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@gorhom/bottom-sheet": "^5.0.6",
     "@hookform/resolvers": "^3.9.1",
+    "@notifee/react-native": "^9.1.7",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/messaging": "^21.6.1",
@@ -26,6 +27,9 @@
     "@react-navigation/native-stack": "^7.1.1",
     "axios": "^1.7.8",
     "expo": "^52.0.11",
+    "expo-audio": "~0.3.1",
+    "expo-av": "~15.0.1",
+    "expo-build-properties": "~0.13.1",
     "expo-contacts": "~14.0.2",
     "expo-dev-client": "~5.0.6",
     "expo-font": "~13.0.1",
@@ -39,6 +43,7 @@
     "react-hook-form": "^7.53.2",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-popper": "^0.3.2",
     "react-native-reanimated": "~3.16.1",
@@ -48,11 +53,7 @@
     "react-native-toast-notifications": "^3.4.0",
     "remask": "^1.2.2",
     "styled-components": "^6.1.13",
-    "zod": "^3.23.8",
-    "expo-audio": "~0.3.1",
-    "expo-av": "~15.0.1",
-    "react-native-maps": "1.18.0",
-    "expo-build-properties": "~0.13.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
