--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^15.1.3",
     "@types/react": "~18.3.12",
     "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.3.3"
