--- a/app.json
+++ b/app.json
@@ -49,6 +49,12 @@
         }
       ],
       [
+        "onesignal-expo-plugin",
+        {
+          "mode": "development"
+        }
+      ],
+      [
         "expo-location",
         {
           "locationAlwaysAndWhenInUsePermission": "Permitir que $(PRODUCT_NAME) use sua localização."
@@ -65,7 +71,7 @@
           },
           "ios": {
             "deploymentTarget": "15.1",
-             "useFrameworks": "static"
+            "useFrameworks": "static"
           }
         }
       ]
