--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "expo-task-manager": "~12.0.3",
     "expo-updates": "~0.26.9",
     "lottie-react-native": "^7.1.0",
+    "onesignal-expo-plugin": "^2.0.3",
     "react": "18.3.1",
     "react-hook-form": "^7.53.2",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
+    "react-native-onesignal": "^5.2.8",
     "react-native-picker-select": "^9.3.1",
     "react-native-popper": "^0.3.2",
     "react-native-reanimated": "~3.16.1",
